React challenge - First version

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
+.container {
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+nav {
+  background: #000;
+}
+
+nav h1 {
   text-align: center;
+  color: #fff;
+  font-weight: normal;
+  font-size: 18px;
+  margin: 0;
+  padding: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  margin-bottom: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.go-back {
+  position: absolute;
+  left: 0;
+  top: 10px;
+  text-decoration: none;
+  color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.go-back svg {
+  position: relative;
+  top: 5px;
+  right: -6px;
 }
 
-.App-link {
-  color: #61dafb;
+.user-btn {
+  background-color: #3C88FF;
+  color: #fff;
+  padding: 10px 15px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  border-radius: 3px;
+  text-decoration: none;
+  display: inline-block;
+}
+.user-btn:hover {
+  background-color: #2464C5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 15px;
+  min-height: 60px;
+}
+.card img {
+  float: left;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.card h3 {
+  font-size: 16px;
+  position: relative;
+  top: 8px;
+  margin-bottom: 12px;
+}
+.card span {
+  font-size: 14px;
+  color: #9c9c9c;
 }
